@@ -19,11 +19,12 @@
 - add Follow/Unfollow
 - add Block/Unblock user
 - add blacklisting of users/games/communities
-- add set default quality per stream
+- add set default quality for stream/video/clips per channel
 - add offline playlists to Following
 - add Collections
 - add Clips
-
+- add Languages
+- add Change sort by/period/direction
 1.4.6
 - Added new title formatting option which includes broadcaster language.
 - Added compatibility for new Twitch encoder names.
